--- a/html-forms/style.css
+++ b/html-forms/style.css
@@ -5,3 +5,17 @@ body {
 input {
   margin: 5px;
 }
+
+.resizedTextbox {
+  margin: 10px;
+  min-width: 500px;
+  min-height: 20px;
+  border-color: rgb(221, 218, 218);
+}
+
+.resizedMessageBox {
+  margin: 10px;
+  min-width: 500px;
+  min-height: 100px;
+  border-color: rgb(221, 218, 218);
+}
